examples/datalog/13_performance/11_complex_recursion.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_complex_rec
Knowledge graph 'test_complex_rec' created.
Switched to knowledge graph: test_complex_rec
> .kg use test_complex_rec
Switched to knowledge graph: test_complex_rec
> +direct[(1, 2), (2, 3), (3, 4), (4, 5)].
Inserted 4 fact(s) into 'direct'.
> +indirect[(1, 3), (2, 4), (3, 5), (1, 4), (2, 5)].
Inserted 5 fact(s) into 'indirect'.
> +reach(X, Y) :- direct(X, Y).
Rule 'reach' registered.
> +reach(X, Y) :- indirect(X, Y).
Rule 'reach' registered.
> +reach(X, Z) :- reach(X, Y), direct(Y, Z).
Rule 'reach' registered.
> +reach(X, Z) :- reach(X, Y), indirect(Y, Z).
Rule 'reach' registered.
> ?- reach(X, Y).
10 rows:
  (1, 2)
  (1, 3)
  (1, 4)
  (1, 5)
  (2, 3)
  (2, 4)
  (2, 5)
  (3, 4)
  (3, 5)
  (4, 5)
> +reach_count(X, count<Y>) :- reach(X, Y).
Rule 'reach_count' registered.
> ?- reach_count(X, C).
4 rows:
  (1, 4)
  (2, 3)
  (3, 2)
  (4, 1)
> +bidir[(1, 2), (2, 3), (3, 4)].
Inserted 3 fact(s) into 'bidir'.
> +bi_reach(X, Y) :- bidir(X, Y).
Rule 'bi_reach' registered.
> +bi_reach(X, Y) :- bidir(Y, X).
Rule 'bi_reach' registered.
> +bi_reach(X, Z) :- bi_reach(X, Y), bidir(Y, Z), X != Z.
Rule 'bi_reach' registered.
> +bi_reach(X, Z) :- bi_reach(X, Y), bidir(Z, Y), X != Z.
Rule 'bi_reach' registered.
> ?- bi_reach(X, Y).
12 rows:
  (1, 2)
  (1, 3)
  (1, 4)
  (2, 1)
  (2, 3)
  (2, 4)
  (3, 1)
  (3, 2)
  (3, 4)
  (4, 1)
  (4, 2)
  (4, 3)
> +dist(X, Y, 1) :- direct(X, Y).
Rule 'dist' registered.
> +dist(X, Z, D+1) :- dist(X, Y, D), direct(Y, Z), D < 5.
Script error: Parse error: Invalid term: 'D+1'
