examples/datalog/13_performance/11_complex_recursion.dl
% Test: Complex Recursion Patterns
% Category: Performance
% Verifies: Multiple recursive rules interacting

.kg create test_complex_rec
.kg use test_complex_rec

% Graph with multiple edge types
+direct[(1, 2), (2, 3), (3, 4), (4, 5)].
+indirect[(1, 3), (2, 4), (3, 5), (1, 4), (2, 5)].

% Reachability through either edge type
+reach(X, Y) :- direct(X, Y).
+reach(X, Y) :- indirect(X, Y).
+reach(X, Z) :- reach(X, Y), direct(Y, Z).
+reach(X, Z) :- reach(X, Y), indirect(Y, Z).

?- reach(X, Y).

% Count reachability
+reach_count(X, count<Y>) :- reach(X, Y).
?- reach_count(X, C).

% Bidirectional reachability
+bidir[(1, 2), (2, 3), (3, 4)].
+bi_reach(X, Y) :- bidir(X, Y).
+bi_reach(X, Y) :- bidir(Y, X).
+bi_reach(X, Z) :- bi_reach(X, Y), bidir(Y, Z), X != Z.
+bi_reach(X, Z) :- bi_reach(X, Y), bidir(Z, Y), X != Z.

?- bi_reach(X, Y).

% Path with distance
+dist(X, Y, 1) :- direct(X, Y).
+dist(X, Z, D+1) :- dist(X, Y, D), direct(Y, Z), D < 5.

+min_dist(X, Y, min<D>) :- dist(X, Y, D).
?- min_dist(X, Y, D).

% Cleanup
.kg use default
.kg drop test_complex_rec
